--- a/views/signupPage.html
+++ b/views/signupPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription - Catalogue Premium</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <script src="jsModules/signupRequest.js"></script>
+    <script src="../jsModules/signupRequest.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
@@ -74,7 +74,7 @@
             </button>
 
             <div class="text-center text-sm text-gray-600 mt-4">
-                Vous avez déjà un compte ? <a href="/TP_Projects/Ecomerce/loginPage.html" class="text-purple-600 hover:underline">Connectez-vous</a>
+                Vous avez déjà un compte ? <a href="/TP_Projects/Ecomerce/views/loginPage.html" class="text-purple-600 hover:underline">Connectez-vous</a>
             </div>
         </form>
     </main>
