fixing the toast

--- a/views/ajouterProduitPage.html
+++ b/views/ajouterProduitPage.html
@@ -53,6 +53,9 @@
                 Ajouter le Produit
             </button>
         </form>
+        <div id="toast" class="fixed bottom-8 right-8 hidden"></div>
     </main>
+    
+
 </body>
 </html>
