--- a/views/forgotPasswordPage.html
+++ b/views/forgotPasswordPage.html
@@ -64,6 +64,8 @@
                 <a href="/TP_Projects/Ecomerce/views/loginPage.html" class="text-purple-600 hover:underline">Retour à la Connexion</a>
             </div>
         </form>
+        <div id="toast" class="fixed bottom-8 right-8 hidden"></div>
+
     </main>
 </body>
 </html>
