--- a/views/loginPage.html
+++ b/views/loginPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - Catalogue Premium</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <script src="../jsModules/loginRequest.js"></script>
+    <script  src="../jsModules/loginRequest.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
@@ -71,6 +71,8 @@
                 Pas de compte ? <a href="/TP_Projects/Ecomerce/views/signupPage.html" class="text-purple-600 hover:underline">Inscrivez-vous</a>
             </div>
         </form>
+        <div id="toast" class="fixed bottom-8 right-8 hidden"></div>
+
     </main>
 </body>
 </html>
