--- a/views/modifyProduct.html
+++ b/views/modifyProduct.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-50">
     <header class="bg-white shadow-sm sticky top-0 z-50 backdrop-filter backdrop-blur-lg bg-opacity-90">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
-            <h1 class="text-4xl font-bold text-center gradient-text">Ajouter un Produit</h1>
+            <h1 class="text-4xl font-bold text-center gradient-text">Modifier un Produit</h1>
         </div>
     </header>
 
@@ -53,6 +53,8 @@
                 Modifier le Produit
             </button>
         </form>
+        <div id="toast" class="fixed bottom-8 right-8 hidden"></div>
+
     </main>
 </body>
 </html>
