--- a/views/signupPage.html
+++ b/views/signupPage.html
@@ -77,6 +77,9 @@
                 Vous avez déjà un compte ? <a href="/TP_Projects/Ecomerce/views/loginPage.html" class="text-purple-600 hover:underline">Connectez-vous</a>
             </div>
         </form>
+        <div id="toast" class="fixed bottom-8 right-8 hidden"></div>
+
     </main>
+
 </body>
 </html>
