--- a/views/sellerProducts.html
+++ b/views/sellerProducts.html
@@ -33,7 +33,7 @@
                     </svg>
                     Tableau de Bord
                 </a>
-                <a href="#products" class="flex items-center p-2 hover:bg-purple-50 rounded transition text-gray-700 hover:text-purple-600">
+                <a href="" class="flex items-center p-2 hover:bg-purple-50 rounded transition text-gray-700 hover:text-purple-600">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 6h16M4 10h16M4 14h16M4 18h16" />
                     </svg>
