fixing the admin viex and handlers

--- a/views/sellerDashbord.html
+++ b/views/sellerDashbord.html
@@ -23,7 +23,7 @@
         </button>
 
         <div class="p-6 pt-12">
-            <h2 class="text-2xl font-bold gradient-text mb-10">Vendeur Hub</h2>
+            <h2 class="text-2xl font-bold gradient-text mb-10">Welcome Admin</h2>
             
             <nav class="space-y-2">
                 <a href="http://localhost/TP_Projects/Ecomerce/views/sellerDashbord.html" class="flex items-center p-2 hover:bg-purple-50 rounded transition text-gray-700 hover:text-purple-600">
