--- a/views/cart.html
+++ b/views/cart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <script src="../jsModules/userProductsHandler.js"></script>
+    <script src="../jsModules/cartHandler.js"></script>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
