finishing the mainpage

--- a/views/mainPage.html
+++ b/views/mainPage.html
@@ -39,7 +39,7 @@
 
         <div id="products-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"></div>
 
-        
+        <div id="toast" class="fixed bottom-8 right-8 hidden"></div>
     </main>
 
     
