--- a/views/userInfo.html
+++ b/views/userInfo.html
@@ -55,7 +55,7 @@
                         <a href="#" class="block py-2 text-purple-600 hover:bg-purple-50 rounded">
                             <i class="fas fa-cog mr-3"></i>Paramètres du Compte
                         </a>
-                        <a href="/TP_Projects/Ecomerce/views/loginPage.html" class="block py-2 text-red-600 hover:bg-red-50 rounded">
+                        <a href="../routes/logout.php" class="block py-2 text-red-600 hover:bg-red-50 rounded" >
                             <i class="fas fa-sign-out-alt mr-3"></i>Déconnexion
                         </a>
                     </nav>
