fixing some errors and logic

--- a/views/productPage.html
+++ b/views/productPage.html
@@ -95,7 +95,7 @@
                 <!-- Product Image Section -->
                 <div class="lg:w-1/2 p-8 flex items-center justify-center bg-gray-50">
                     <div class="relative w-full max-w-lg">
-                        <img src="/api/placeholder/800/600" alt="Product Image" class="w-full h-100 object-cover rounded-lg shadow-md" id="product-image">
+                        <img src="" alt="Product Image" class="w-full h-100 object-cover rounded-lg shadow-md" id="product-image">
                     </div>
                 </div>
 
