--- a/views/sellerDashbord.html
+++ b/views/sellerDashbord.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="bg-white rounded-xl shadow-md p-6 border-l-4 border-purple-500">
                     <h3 class="text-gray-500 mb-2">Revenu Total</h3>
-                    <p class="text-2xl font-bold text-gray-800">3 456,78 €</p>
+                    <p class="text-2xl font-bold text-gray-800" id="revenue">€</p>
                 </div>
             </div>
         </section>
