--- a/views/signupPage.html
+++ b/views/signupPage.html
@@ -48,13 +48,18 @@
         <form class="bg-white rounded-xl shadow-md p-8 space-y-6" onsubmit="handSignUpRequest(event)">
             <div>
                 <label for="username" class="block text-sm font-medium text-gray-700 mb-2">Nom d'utilisateur</label>
-                <input type="email" id="username" name="username" required 
+                <input type="text" id="username" name="username" required 
                        class="w-full p-3 border-2 border-gray-200 rounded-lg focus:border-purple-500 focus:ring-2 focus:ring-purple-200 outline-none transition">
             </div>
 
             <div>
                 <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Mot de passe</label>
                 <input type="password" id="password" name="password" required 
+                       class="w-full p-3 border-2 border-gray-200 rounded-lg focus:border-purple-500 focus:ring-2 focus:ring-purple-200 outline-none transition">
+            </div>
+            <div>
+                <label for="username" class="block text-sm font-medium text-gray-700 mb-2">Email d'utilisateur</label>
+                <input type="email" id="email" name="email" required 
                        class="w-full p-3 border-2 border-gray-200 rounded-lg focus:border-purple-500 focus:ring-2 focus:ring-purple-200 outline-none transition">
             </div>
 
